# ask-remote-agent-skill

./: HERMES-SETUP.md  README.md  SKILL.md  agent.py  command.md  peer.py  pyproject.toml
benchmarks/: run.py
docs/agents/: goose.md  hermes.md
goose/: acp.py
tests/: test_peer.py  test_peer_mode.py
tools/: _context.py
