[project]
name = "ask-foreign-agent-skill"
version = "0.1.0"
description = "Delegate tasks to a remote autonomous agent runtime (Hermes, Goose)"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
